# vibe

./: .env.example  .gitignore  20260111_2123_01kepg2ab1fgk8g96d5trh3eyw.webm  CLAUDE.md  README.md  open-cli.sh  package.json  prompt.md  pyproject.toml  requirements.txt  vibe.config.example.json
.claude/: MARKETING_TEAM_README.md  settings.json
.claude/agents/: blog-writer.md  linkedin-writer.md  newsletter-writer.md  planner.md  quote-writer.md  reviewer.md  shorts-scriptwriter.md  thread-writer.md  video-orchestrator.md  youtube-scriptwriter.md
.claude/commands/: create-quote-video.md
examples/: basic-usage.ts  batch-download.ts  custom-hooks.ts
outputs/: blog.md  brief.md  linkedin.md  newsletter.md  review-report.md  youtube-script.md
outputs/shorts-scripts/: shorts-01.md  shorts-02.md  shorts-03.md
outputs/threads/: thread-01.md  thread-02.md  thread-03.md  thread-04.md  thread-05.md  thread-06.md  thread-07.md  thread-08.md  thread-09.md  thread-10.md
ppt-agent-team/: PRD.md  README.md
ppt-agent-team/agents/: content_organizer_agent.md  research_agent.md  slide_evaluator_agent.md  visual_qa_agent.md
ppt-agent-team/workflows/: ppt_workflow.md
ppt_agent/: __init__.py  config.py  main.py
ppt_agent/agents/: __init__.py  base.py  design.py  orchestrator.py  research.py
ppt_agent/llm/: __init__.py  clients.py  router.py
ppt_agent/models/: __init__.py  slide.py
ppt_agent/skills/: __init__.py  design.py  export.py  structure.py
src/: index.ts
src/config/: index.ts
src/hooks/: HookManager.ts  index.ts  types.ts
src/quote_video/: config.py  (+6 more)
(+39 files in other folders)
