[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-agent"
version = "0.1.0"
description = "AI-powered PPT generation agent with Multi-LLM support (Claude + Gemini)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PPT Agent Team"}
]
keywords = ["ppt", "powerpoint", "ai", "llm", "claude", "gemini", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "python-pptx>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ppt-agent = "ppt_agent.main:main"

[project.urls]
Homepage = "https://github.com/kimsanguine/vibe"
Repository = "https://github.com/kimsanguine/vibe"

[tool.setuptools.packages.find]
include = ["ppt_agent*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
